--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,20 @@
 {
     "name": "willdurand/nmap",
-    "description": "nmap is a PHP wrapper for Nmap, a free security scanner for network exploration.",
+    "description": "nmap is a PHP wrapper for Nmap, a free security scanner for network exploration. Updated for PHP 7.1",
     "license": "MIT",
     "authors": [
         {
             "name": "William DURAND",
             "email": "william.durand1@gmail.com"
-        }
+        },
+        {
+            "name": "repatD",
+            "email": "repat@repat.de"
+        },
     ],
     "require": {
-        "php": ">=5.3.0",
-        "symfony/process": "~2.0|~3.0"
+        "php": ">=7.1.3",
+        "symfony/process": "~4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~3.7"
