--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "willdurand/nmap",
+    "name": "repat/willdurand-nmap",
     "description": "nmap is a PHP wrapper for Nmap, a free security scanner for network exploration. Updated for PHP 7.1",
     "license": "MIT",
     "authors": [
