--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
             "email": "william.durand1@gmail.com"
         },
         {
-            "name": "repatD",
+            "name": "repat",
             "email": "repat@repat.de"
         },
     ],
