--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "repat/willdurand-nmap",
     "description": "nmap is a PHP wrapper for Nmap, a free security scanner for network exploration. Updated for PHP 7.1",
     "license": "MIT",
-    "version": "0.8.3",
+    "version": "0.9",
     "authors": [
         {
             "name": "William DURAND",
@@ -15,7 +15,7 @@
     ],
     "require": {
         "php": ">=7.1.3",
-        "symfony/process": "~4.0"
+        "symfony/process": "~4.0 | ~5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~3.7"
